# stm32-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
inc/: main.hpp
src/: main.cpp
